src/objects/Apttus_Config2__AssetLineItemHistory__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__PriceIncludedInBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the option price is included in the bundle. Only applicable to Option line types.</description>
        <label>Price Included In Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMethod__c</fullName>
        <description>The price method</description>
        <inlineHelpText>The price method</inlineHelpText>
        <label>Price Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Flat Price</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Related Price</fullName>
                </value>
                <value>
                    <fullName>Tiered Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Included Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <inlineHelpText>The pricing unit of measure for the product</inlineHelpText>
        <label>Pricing Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each primary line item</description>
        <inlineHelpText>Represents the unique number for each primary line item</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PurchaseDate__c</fullName>
        <description>The purchase date for products or services.</description>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalAdjustmentAmount__c</fullName>
        <description>The renewal price adjustment amount.</description>
        <inlineHelpText>The renewal price adjustment amount.</inlineHelpText>
        <label>Renewal Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalAdjustmentType__c</fullName>
        <description>The renewal price adjustment type</description>
        <inlineHelpText>The renewal price adjustment type</inlineHelpText>
        <label>Renewal Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Uplift</fullName>
                </value>
                <value>
                    <fullName>Uplift Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalDate__c</fullName>
        <description>The asset renewal date</description>
        <inlineHelpText>The asset renewal date</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalFrequency__c</fullName>
        <description>The asset renewal frequency</description>
        <inlineHelpText>The asset renewal frequency</inlineHelpText>
        <label>Renewal Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalTerm__c</fullName>
        <description>The asset renewal term</description>
        <inlineHelpText>The asset renewal term</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Line Item History (Ship To)</relationshipLabel>
        <relationshipName>AssetLineItemHistoryShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <inlineHelpText>The pricing term associated with the product or service</inlineHelpText>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <inlineHelpText>ID of the associated quote/proposal line item</inlineHelpText>
        <label>Quote Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Asset Line Item History</relationshipLabel>
        <relationshipName>AssetLineItemHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset Line Item History</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Line Item History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>